--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,13 @@
 .git
 .vscode
+.coverage
+*.pyc
+work/
+config.py*
+notes.txt
+data/
+dev/
+**/.pytest_cache
+**/htmlcov
+**/.cache
+**/__pycache__
